[package]
name = "fortify-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.6.1"
base64 = "0.22.1"
clap = { version = "4.5.54", features = ["derive"] }
dialoguer = "0.12.0"
hex = "0.4.3"
rand = "0.9.2"
uuid = { version = "1.19.0", features = ["v4", "v7", "fast-rng"] }
zxcvbn = "3.1.0"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.3"
