[workspace]
members = ["."]

[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.30.3"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for
targets = ["x86_64-unknown-linux-gnu", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "aarch64-apple-darwin", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"

[package]
name = "fortify-cli"
version = "0.1.0"
edition = "2024"
description = "A robust CLI tool for generating strong passwords, GUIDs/UUIDs, and cryptographically secure secrets."
repository = "https://github.com/YOUR_USERNAME/fortify-cli"
license = "MIT"
categories = ["command-line-utilities", "cryptography"]
keywords = ["cli", "security", "password", "uuid", "generator"]

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
base64 = "0.22.1"
clap = { version = "4.5.54", features = ["derive"] }
dialoguer = "0.12.0"
hex = "0.4.3"
rand = "0.9.2"
uuid = { version = "1.19.0", features = ["v4", "v7", "fast-rng"] }
zxcvbn = "3.1.0"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.3"
